--- a/index.html
+++ b/index.html
@@ -28,4 +28,17 @@
     <div class="half-width"> <img src="images/main-imtiaz.png" alt="imtiaz"></div>
 </section>
 
+<section class="dream-big">
+    <div class="half-width">
+        <img src="images/imti-bg2.png" alt="imti">
+    </div>
+
+    <div class="half-width">
+        <h1>Dream Big</h1>
+        <h3>Become a web developer</h3>
+        <p class="div-2-para">I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+        <a class="link-button" target="_blank" href="https://www.facebook.com/profile.php?id=100057028124208">DOWNLOAD RESUME</a>
+    </div>
+</section>
+
 </html>
